--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
 	--font-sans: var(--font-switzer);
 	--font-cabinet: var(--font-cabinet);
 	--font-tabular: var(--font-switzer);
+	--font-gambarino: var(--font-gambarino);
 	--font-mono: var(--font-tabular);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
