--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,6 +20,7 @@ const { title } = Astro.props;
 		<Font cssVariable="--font-switzer" preload />
 		<Font cssVariable="--font-cabinet" preload />
 		<Font cssVariable="--font-tabular" preload />
+		<Font cssVariable="--font-gambarino" preload />
 
 		<ClientRouter />
 	</head>
