Fix font CSS variable naming conflict

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,10 +17,10 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 
-		<Font cssVariable="--font-switzer" preload />
-		<Font cssVariable="--font-cabinet" preload />
-		<Font cssVariable="--font-tabular" preload />
-		<Font cssVariable="--font-gambarino" preload />
+		<Font cssVariable="--astro-font-switzer" preload />
+		<Font cssVariable="--astro-font-cabinet" preload />
+		<Font cssVariable="--astro-font-tabular" preload />
+		<Font cssVariable="--astro-font-gambarino" preload />
 
 		<ClientRouter />
 	</head>
