--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,11 +3,11 @@
 @plugin "tailwind-clamp";
 
 @theme inline {
-	--font-sans: var(--font-switzer);
-	--font-cabinet: var(--font-cabinet);
-	--font-tabular: var(--font-switzer);
-	--font-gambarino: var(--font-gambarino);
-	--font-mono: var(--font-tabular);
+	--font-sans: var(--astro-font-switzer);
+	--font-cabinet: var(--astro-font-cabinet);
+	--font-tabular: var(--astro-font-switzer);
+	--font-gambarino: var(--astro-font-gambarino);
+	--font-mono: var(--astro-font-tabular);
 	--color-sidebar-ring: var(--sidebar-ring);
 	--color-sidebar-border: var(--sidebar-border);
 	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
