Fix content area white space

--- a/src/components/widgets/ImageWidget.astro
+++ b/src/components/widgets/ImageWidget.astro
@@ -34,7 +34,7 @@ const containerJustifyClass =
 
 <Widget
 	class:list={[
-		"flex max-w-[528px] flex-col gap-3 p-6 md:max-w-none",
+		"flex max-w-[528px] flex-col gap-3 md:max-w-none",
 		containerJustifyClass,
 		"mb-12 md:mb-0",
 	]}
