--- a/src/components/widgets/PreviewWidget.astro
+++ b/src/components/widgets/PreviewWidget.astro
@@ -39,7 +39,7 @@ const dateColorClass = tone === "light" ? "text-white" : "text-base-500";
 
 <Widget
 	class:list={[
-		"flex max-w-[528px] flex-col gap-3 p-6 md:justify-between",
+		"flex max-w-[528px] flex-col gap-3 md:justify-between",
 		"mb-12 md:mb-0",
 	]}
 	{...rest}
