--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -21,7 +21,7 @@ const { title, scrollAreaId = "main-scroll", filterCounts } = Astro.props;
 			data-scroll-area-id={scrollAreaId}
 		>
 			<div
-				class="mx-auto flex max-w-[528px] flex-col md:mx-0 md:max-w-none md:flex-row"
+				class="mx-auto flex max-w-[528px] flex-col gap-4 p-4 md:mx-0 md:max-w-none md:flex-row"
 			>
 				<slot />
 			</div>
