--- a/src/components/widgets/ImageSwapWidget.astro
+++ b/src/components/widgets/ImageSwapWidget.astro
@@ -53,7 +53,7 @@ const aspectClass =
 
 <Widget
 	class:list={[
-		"flex max-w-[528px] flex-col gap-3 p-6 md:max-w-none",
+		"flex max-w-[528px] flex-col gap-3 md:max-w-none",
 		containerJustifyClass,
 		"mb-12 md:mb-0",
 	]}
