Fix dialog z index too low

--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -34,7 +34,7 @@ const {
 		</ProjectHeader>
 
 		<div
-			class="min-h-0 flex-1 overflow-y-hidden p-4 md:overflow-x-auto"
+			class="relative z-0 min-h-0 flex-1 overflow-y-hidden p-4 md:overflow-x-auto"
 			id="scroll-container"
 		>
 			<slot name="interactive">
