--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -12,15 +12,7 @@ interface Props {
 	floatingSidebar?: boolean;
 }
 
-const {
-	title,
-	description,
-	createdDate,
-	lastUpdatedDate,
-	types,
-	disableSidebarClickOutside,
-	floatingSidebar = false,
-} = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <BaseLayout title={title}>
@@ -95,5 +87,3 @@ const {
 		</script>
 	</div>
 </BaseLayout>
-
-<script></script>
