--- a/src/components/widgets/PreviewWidget.astro
+++ b/src/components/widgets/PreviewWidget.astro
@@ -94,6 +94,7 @@ const dateColorClass = tone === "light" ? "text-white" : "text-base-500";
 				muted
 				autoplay
 				playsinline
+				transition:name={id}
 				class="relative z-10 h-auto w-[90%]"></video>
 
 			<div
