--- a/src/components/widgets/VideoWidget.astro
+++ b/src/components/widgets/VideoWidget.astro
@@ -66,6 +66,7 @@ const containerJustifyClass =
 				muted
 				autoplay
 				playsinline
+				transition:name={id}
 				class="h-auto w-full md:h-full md:w-auto md:max-w-full"></video>
 		</a>
 	</div>
