--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -10,9 +10,10 @@ interface Props {
 	types: string[];
 	disableSidebarClickOutside?: boolean;
 	floatingSidebar?: boolean;
+	id: string;
 }
 
-const { title, description } = Astro.props;
+const { title, description, id } = Astro.props;
 ---
 
 <BaseLayout title={title}>
@@ -29,16 +30,22 @@ const { title, description } = Astro.props;
 			class="relative z-0 min-h-0 flex-1 overflow-y-hidden p-4 md:overflow-x-auto"
 			id="scroll-container"
 		>
-			<slot name="interactive">
-				<div
-					class="bg-base-100 flex h-full items-center justify-center p-0 md:p-4"
-				>
-					<div class="text-base-500 w-full text-center">
-						<h2 class="mb-2 text-2xl font-medium">Interactive Content Area</h2>
-						<p class="text-sm">Interactive components will be rendered here</p>
+			<div transition:name={id} class="h-full w-full">
+				<slot name="interactive">
+					<div
+						class="bg-base-100 flex h-full items-center justify-center p-0 md:p-4"
+					>
+						<div class="text-base-500 w-full text-center">
+							<h2 class="mb-2 text-2xl font-medium">
+								Interactive Content Area
+							</h2>
+							<p class="text-sm">
+								Interactive components will be rendered here
+							</p>
+						</div>
 					</div>
-				</div>
-			</slot>
+				</slot>
+			</div>
 		</div>
 
 		<script>
