--- a/src/components/widgets/ImageWidget.astro
+++ b/src/components/widgets/ImageWidget.astro
@@ -58,6 +58,7 @@ const containerJustifyClass =
 						alt={alt || title}
 						loading="lazy"
 						decoding="async"
+						transition:name={id}
 						class="h-auto w-full md:h-full md:w-auto md:max-w-full"
 					/>
 				</a>
