Fix inconsistent aspect while animating

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -176,12 +176,24 @@ html {
 		color: var(--color-base-50);
 	}
 }
+
+::view-transition-old(*) {
+	animation-duration: 200ms;
+	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
+}
+::view-transition-new(*) {
+	animation-duration: 200ms;
+	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+	width: 100%;
+	height: 100%;
+	object-fit: fill;
+}
 ::view-transition-group(*) {
 	animation-duration: 700ms;
 	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
-}
-::view-transition-old(*),
-::view-transition-new(*) {
-	animation-duration: 700ms;
-	animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+	overflow: clip;
+	z-index: 10;
 }
