--- a/src/components/widgets/VideoWidget.astro
+++ b/src/components/widgets/VideoWidget.astro
@@ -1,5 +1,4 @@
 ---
-import Badge from "@/components/Badge.astro";
 import Widget from "@/components/widgets/Widget.astro";
 import { toCssHeight } from "@/lib/utils";
 import { getCldVideoUrl } from "astro-cloudinary/helpers";
@@ -12,38 +11,21 @@ interface Props {
 	types?: string[];
 	id?: string;
 	height?: string | number;
-	position?: "top" | "bottom";
 	[key: string]: any;
 }
 
-const {
-	title,
-	video,
-	description,
-	poster,
-	types,
-	id,
-	height,
-	position,
-	...rest
-} = Astro.props;
+const { title, video, description, poster, types, id, height, ...rest } =
+	Astro.props;
 
 const videoUrl = getCldVideoUrl({ src: video });
 
 const mediaHeightCss = toCssHeight(height);
 const mediaWrapperStyle = `--media-h:${mediaHeightCss};`;
-const containerJustifyClass =
-	position === "bottom"
-		? "md:justify-end"
-		: position === "top"
-			? "md:justify-start"
-			: "";
 ---
 
 <Widget
 	class:list={[
-		"flex max-w-[528px] flex-col gap-3 md:max-w-none",
-		containerJustifyClass,
+		"flex max-w-[528px] flex-col gap-3 md:max-w-none md:justify-start",
 		"mb-12 md:mb-0",
 	]}
 	{...rest}
@@ -68,32 +50,5 @@ const containerJustifyClass =
 				playsinline
 				class="h-auto w-full md:h-full md:w-auto md:max-w-full"></video>
 		</a>
-	</div>
-
-	<div class="flex flex-col gap-2 md:hidden">
-		<div class="flex items-center justify-between gap-2">
-			<h2
-				class="font-switzer text-base-900 min-w-0 truncate text-lg leading-tight font-medium"
-			>
-				{title}
-			</h2>
-			{
-				types && types.length > 0 && (
-					<div class="flex flex-none gap-2">
-						{types.map((t) => (
-							<Badge
-								text={`${t.slice(0, 1).toUpperCase()}${t.slice(1)}`}
-								variant="dark"
-							/>
-						))}
-					</div>
-				)
-			}
-		</div>
-		{
-			description && (
-				<p class="font-switzer text-base-600 leading-none">{description}</p>
-			)
-		}
 	</div>
 </Widget>
