--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							previewWidth={config.previewWidth}
 							variant={{ type: "video", previewVideo: config.previewVideo }}
 							data-types={dataTypes}
 							style={animationStyle}
@@ -83,6 +84,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							previewWidth={config.previewWidth}
 							variant={{
 								type: "image",
 								previewImage: config.previewImage,
@@ -98,6 +100,7 @@ const filterName =
 						<PreviewWidget
 							{...baseProps}
 							bgImage={config.bgImage}
+							previewWidth={config.previewWidth}
 							variant={{
 								type: "image-swap",
 								previewImages: config.previewImages,
